src/app/nav/nav.component.scss
.example-spacer {
  flex: 1 1 auto;
}

.menu-button {
  min-width: auto;
  line-height: normal;
}

.logo {
  margin-left: 1rem;
  font-size: 1.2rem;
}

.app-name {
  font-size: 1.2rem;
}

img {
  width: 2.1rem;
  margin-left: 1rem;
  border: solid 1px rgba(212, 212, 212, 0.5);
  border-radius: 100%;
}

.no-photo {
  width: 2.1rem;
  height: 2.1rem;
  margin-left: 1rem;
  font-size: 2.1rem;

  ::ng-deep svg {
    display: block;
    margin: auto;
    color: #212529;
  }
}

.container {
  position: relative;
  padding: 0;
  background-color: white;
  overflow: hidden;
  user-select: none;
}

.mat-toolbar {
  margin: 0;
  background: white;
  font: inherit;
  letter-spacing: inherit;
}

